add new applications

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <span class="description-text">小春子<br>是一个有趣可爱的人</span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">我的博客</a>
+        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
         <a href="https://status.springing.top" class="about-button social-button" target="_blank">服务器状态</a>
       </div>
     </div>
@@ -264,6 +264,24 @@
         </div>
       </div>
 
+      <!--服务器监控-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://status.springing.top" target="_blank">
+          <img class="group-item-icon-img" src="./img/status.ico" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://status.springing.top" target="_blank">服务器状态</a>
+            <a class="discription" href="https://status.springing.top" target="_blank">查看Spring主服务器状态</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://status.springing.top" target="_blank">查看</a>
+          </div>
+        </div>
+      </div>
+
+
+
 
 
       <!--项目页面-->
@@ -319,8 +337,8 @@
   <div class="footer">
     <div class="footer-content need-padding">
       <span class="info">Copyright © 2022-至今 <font color="#2b9fff">小春子</font>💖 保留所有权利。</span>
-      <span class="info">由<font color="#2b9fff">Spring</font>强力驱动 为纪念 <font color="#2b9fff">堂吉诃德 & 奶油小狗</font>而生</span>
-      <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Themed by HeoWeb</a></div>
+      <span class="info">由<font color="#2b9fff">Spring</font>强力驱动 为纪念 <font color="#2b9fff">堂吉诃德 & 奶油小狗</font> 而生</span>
+      <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a></div>
     </div>
   </div>
 </body>
