--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <span class="title">Little Springing</span></span>
       </div>
       <div class="description">
-        <span class="description-text">小春子<br>是一个有趣可爱的人</span>
+        <span class="description-text">一个有趣可爱的人</span>
       </div>
       <div class="first-stack-links">
         <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
@@ -89,17 +89,17 @@
   </div>
 </div>
 
-<!--一中南街1号回忆录-->
+<!--一中南街一号回忆录-->
   <div id='回忆录'class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
     <div class="banner-info need-padding">
-      <span class="tips">一中南街1号回忆录</span>
+      <span class="tips">一中南街一号回忆录</span>
       <span class="ttitle">属于每一个一中人<span class="punctuation">，</span><br>独一无二的回忆录<span class="punctuation">。</span></span>
       <div class="banner-discription-group">
         <span class="description">“我更愿意就事论事 返回到当年的心境里 看一看当时的悲欢和忧乐。”</span>
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://cyyz.springing.top/">访问项目</a>
-        <a class="second-link" href="https://cyyz.springing.top/#/64/start" target="_blank">作者的话:时间之外的往事</a>
+        <a class="second-link" href="https://cyyz.springing.top/d/8-%E5%BA%8F%E8%A8%80-%E6%97%B6%E9%97%B4%E4%B9%8B%E5%A4%96%E7%9A%84%E5%BE%80%E4%BA%8B" target="_blank">作者的话:时间之外的往事</a>
       </div>
     </div>
     <div class="banner-pic">
@@ -110,16 +110,16 @@
  <!--1中南街下面的-->
  <div class="product-group need-padding" id="">
   <h2 class="group-title">相关</h2>
-  <span class="group-description">一中南街1号回忆录</span>
+  <span class="group-description">一中南街一号回忆录</span>
   <div class="group-items">
-    <!--南街1号-->
+    <!--南街一号-->
     <div class="group-item">
       <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
         <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">独家</sup></a>
+          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街一号回忆录<sup class="hot">独家</sup></a>
           <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
         </div>
         <div class="group-info-button">
@@ -134,8 +134,8 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录</a>
-          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录的源代码仓库</a>
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录<sup class="hot">老版本</sup></a>
+          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录的源代码仓库</a>
         </div>
         <div class="group-info-button">
           <a class="linkbutton" href="https://github.com/lispringing/CYYZ" target="_blank">Get it</a>
@@ -248,14 +248,14 @@
     <span class="group-description">小春子的应用汇总</span>
     <div class="group-items">
 
-      <!--南街1号-->
+      <!--南街一号-->
       <div class="group-item">
         <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
           <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">独家</sup></a>
+            <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街一号回忆录<sup class="hot">独家</sup></a>
             <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
           </div>
           <div class="group-info-button">
@@ -279,6 +279,22 @@
           </div>
         </div>
       </div>
+
+    <!--我的世界面板-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://mc.springing.top" target="_blank">
+        <img class="group-item-icon-img" src="./img/mc.jpg" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://mc.springing.top" target="_blank">Minecraft</a>
+          <a class="discription" href="https://mc.springing.top" target="_blank">春子的Minecraft服务器面板</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://mc.springing.top" target="_blank">前往</a>
+        </div>
+      </div>
+    </div>
 
 
 
@@ -314,8 +330,8 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录<sup class="hot">热门</sup></a>
-          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录的源代码仓库</a>
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录<sup class="hot">老版本</sup></a>
+          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录的源代码仓库</a>
         </div>
         <div class="group-info-button">
           <a class="linkbutton" href="https://github.com/lispringing/CYYZ" target="_blank">Get it</a>
