--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
         <span class="title">Little Springing</span></span>
       </div>
       <div class="description">
-        <span class="description-text">一个有趣可爱的人</span>
+        <span class="description-text">小春子<br>一个有趣可爱的人<br>也是一种傻乎乎的生物</span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
+        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">春子博客</a>
         <a href="https://status.springing.top" class="about-button social-button" target="_blank">服务器状态</a>
+        <a href="https://status.springing.top" class="about-button social-button" target="_blank">网站列表</a>
       </div>
     </div>
     <a href="https://blog.springing.top/about/" class="right-stack" target="_blank">
@@ -279,22 +280,6 @@
           </div>
         </div>
       </div>
-
-    <!--我的世界面板-->
-    <div class="group-item">
-      <a class="group-item-icon" href="https://mc.springing.top" target="_blank">
-        <img class="group-item-icon-img" src="./img/mc.jpg" alt="product-icon" title="product-icon">
-      </a>
-      <div class="group-info-group">
-        <div class="group-info">
-          <a class="title" href="https://mc.springing.top" target="_blank">Minecraft</a>
-          <a class="discription" href="https://mc.springing.top" target="_blank">春子的Minecraft服务器面板</a>
-        </div>
-        <div class="group-info-button">
-          <a class="linkbutton" href="https://mc.springing.top" target="_blank">前往</a>
-        </div>
-      </div>
-    </div>
 
 
 
