--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://cyyz.springing.top/">访问项目</a>
-        <a class="second-link" href="https://cyyz.springing.top/d/8-%E5%BA%8F%E8%A8%80-%E6%97%B6%E9%97%B4%E4%B9%8B%E5%A4%96%E7%9A%84%E5%BE%80%E4%BA%8B" target="_blank">作者的话:时间之外的往事</a>
+        <a class="second-link" href="https://cyyz.springing.top/#/64/start" target="_blank">作者的话:时间之外的往事</a>
       </div>
     </div>
     <div class="banner-pic">
@@ -135,7 +135,7 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录<sup class="hot">老版本</sup></a>
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录</a>
           <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录的源代码仓库</a>
         </div>
         <div class="group-info-button">
