--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <span class="title">Little Springing</span></span>
       </div>
       <div class="description">
-        <span class="description-text">小春子<br>一个有趣可爱的人<br>也是一种傻乎乎的生物</span>
+        <span class="description-text">小春子<br>一个有趣可爱的人<br>探索创造有趣的事情</span>
       </div>
       <div class="first-stack-links">
         <a href="https://blog.springing.top" class="about-button social-button" target="_blank">春子博客</a>
