--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
     </div>
   </div>
 
-<!--
+
   <div class="special-card">
     <div class="special-card-left">
-      <div class="tips">大事件</div>
+      <div class="tips">最新消息</div>
       <div class="title">敲木鱼9.0支持<br>现实增强</div>
       <div class="discription">现在你可以使用你敲木鱼的AR模式，将喜欢的音效贴纸放置在任何你想要的位置上。</div>
       <div class="button-group">
@@ -240,7 +240,6 @@
     </div>
     <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
   </div>
--->
 
 
   <!--应用页面-->
