春不许 再回头

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Springing - 发现创造有意思的事物跟人</title>
+  <title>Springing - 发现创造有意思的事物</title>
   <!--引入css,js等必要文件-->
   <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" type="image/x-icon" href="./img/avatar.webp">
@@ -180,10 +180,10 @@
         <div class="group-info-group">
           <div class="group-info">
             <a class="title" href="https://www.happyking.top" target="_blank">Springing HK Music</a>
-            <a class="discription" href="https://github.com/lispringing/spring-page" target="_blank">基于vue.js的在线音乐网站</a>
+            <a class="discription" href="https://www.happyking.top" target="_blank">基于vue.js的在线音乐网站</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://github.com/lispringing/spring-page" target="_blank">Use it</a>
+            <a class="linkbutton" href="https://www.happyking.top" target="_blank">Use it</a>
             <span class="linkbotton-tips">前往Springing HK Music体验</span>
           </div>
         </div>
@@ -226,7 +226,7 @@
     </div>
   </div>
 
-
+  <!--新闻-
   <div class="special-card">
     <div class="special-card-left">
       <div class="tips">最新消息</div>
@@ -239,6 +239,7 @@
     </div>
     <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
   </div>
+-->
 
 
   <!--应用页面-->
@@ -263,18 +264,34 @@
         </div>
       </div>
 
-      <!--服务器监控-->
+      <!--服务监控-->
       <div class="group-item">
         <a class="group-item-icon" href="https://status.springing.top" target="_blank">
-          <img class="group-item-icon-img" src="./img/status.ico" alt="product-icon" title="product-icon">
+          <img class="group-item-icon-img" src="./img/status.png" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://status.springing.top" target="_blank">服务器状态</a>
-            <a class="discription" href="https://status.springing.top" target="_blank">查看Spring主服务器状态</a>
+            <a class="title" href="https://status.springing.top" target="_blank">春子服务状态</a>
+            <a class="discription" href="https://status.springing.top" target="_blank">查看Spring服务状态</a>
           </div>
           <div class="group-info-button">
             <a class="linkbutton" href="https://status.springing.top" target="_blank">查看</a>
+          </div>
+        </div>
+      </div>
+
+<!--博客-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://blog.springing.top" target="_blank">
+          <img class="group-item-icon-img" src="./img/avatar.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://blog.springing.top" target="_blank">小春子の博客</a>
+            <a class="discription" href="https://blog.springing.top" target="_blank">春子平时写的一些水文</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://blog.springing.top" target="_blank">前往</a>
           </div>
         </div>
       </div>
@@ -344,4 +361,5 @@
 <script src="./js/simpleParallax.min.js"></script>
 <script src="./js/main.js"></script>
 <script src="./js/console.js"></script>
+</body>
 </html>
