--- a/index.html
+++ b/index.html
@@ -330,11 +330,28 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录<sup class="hot">老版本</sup></a>
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录</a>
           <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街一号回忆录的源代码仓库</a>
         </div>
         <div class="group-info-button">
           <a class="linkbutton" href="https://github.com/lispringing/CYYZ" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
+    
+    <!--博客仓库-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/Springing" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/Springing" target="_blank">Hexo-Theme-Springing</a>
+          <a class="discription" href="https://github.com/lispringing/Springing" target="_blank">一款高颜值，高性能的博客框架/主题</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/Springing" target="_blank">Get it</a>
           <span class="linkbotton-tips">于Github上获取源码</span>
         </div>
       </div>
