--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div class="group-info-group">
         <div class="group-info">
           <a class="title" href="https://github.com/lispringing/Springing" target="_blank">Hexo-Theme-Springing</a>
-          <a class="discription" href="https://github.com/lispringing/Springing" target="_blank">一款高颜值，高性能的博客框架/主题</a>
+          <a class="discription" href="https://github.com/lispringing/Springing" target="_blank">一款高颜值，高性能的博客框架</a>
         </div>
         <div class="group-info-button">
           <a class="linkbutton" href="https://github.com/lispringing/Springing" target="_blank">Get it</a>
