--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="avatar-info">
     <img loading="lazy" class="avatar-image" src="./img/avatar.webp">
     <span class="avatar-name">爱睡觉的小春子</span>
-    <span class="avatar-title">努力的做一个有意思，很好很棒的人。</span>
+    <span class="avatar-title">生活不易苦恼多 没钱一样很洒脱</span>
   </div>
 </div>
 
