--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <img class="banner-img" src="./img/dog-black.webp" alt="banner" title="banner">
     </a>
   </div>
+  
 <!--作者自我描述-->
 <div class="avatar-discription">
   <span class="avatar-discription-text">
@@ -85,10 +86,26 @@
   <div class="avatar-info">
     <img loading="lazy" class="avatar-image" src="./img/avatar.webp">
     <span class="avatar-name">爱睡觉的小春子</span>
-    <span class="avatar-title">生活不易苦恼多 没钱一样很洒脱</span>
+    <span class="avatar-title">些许风霜些许愁 无足之鸟不回头</span>
   </div>
 </div>
 
+</br>
+</br>
+
+<!--最新消息-->
+ <div class="special-card">
+    <div class="special-card-left">
+      <div class="tips">最新消息</div>
+      <div class="title">敲木鱼9.0支持<br>现实增强</div>
+      <div class="discription">现在你可以使用你敲木鱼的AR模式，将喜欢的音效贴纸放置在任何你想要的位置上。</div>
+      <div class="button-group">
+        <a class="button linkbutton" href="https://apps.apple.com/cn/app/%E6%95%B2%E6%9C%A8%E9%B1%BC/id6443798663">立即前往购买</a>
+        <span class="linkbotton-tips">买断制</span>
+      </div>
+    </div>
+    <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
+  </div>
 <!--一中南街一号回忆录-->
   <div id='回忆录'class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
     <div class="banner-info need-padding">
@@ -226,21 +243,6 @@
     </div>
   </div>
 
-  <!--新闻-
-  <div class="special-card">
-    <div class="special-card-left">
-      <div class="tips">最新消息</div>
-      <div class="title">敲木鱼9.0支持<br>现实增强</div>
-      <div class="discription">现在你可以使用你敲木鱼的AR模式，将喜欢的音效贴纸放置在任何你想要的位置上。</div>
-      <div class="button-group">
-        <a class="button linkbutton" href="https://apps.apple.com/cn/app/%E6%95%B2%E6%9C%A8%E9%B1%BC/id6443798663">立即前往购买</a>
-        <span class="linkbotton-tips">买断制</span>
-      </div>
-    </div>
-    <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
-  </div>
--->
-
 
   <!--应用页面-->
   <div class="product-group need-padding" id="应用">
@@ -370,7 +372,7 @@
   <div class="footer">
     <div class="footer-content need-padding">
       <span class="info">Copyright © 2022-至今 <font color="#2b9fff">小春子</font>💖 保留所有权利。</span>
-      <span class="info">由<font color="#2b9fff">Spring</font>强力驱动 为纪念 <font color="#2b9fff">堂吉诃德 & 奶油小狗</font> 而生</span>
+      <span class="info">由 <font color="#2b9fff">金鱼1.0框架</font> 强力驱动 运行基于 <font color="#2b9fff">Spring</font> 服务器</span>
       <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a></div>
     </div>
   </div>
