--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 </br>
 
 <!--最新消息-->
- <div class="special-card">
+ <div class="special-card" style="background-image: linear-gradient(180deg, #0ce3e7 0%, #3D00A0 100%);">
     <div class="special-card-left">
       <div class="tips">最新消息</div>
-      <div class="title">敲木鱼9.0支持<br>现实增强</div>
-      <div class="discription">现在你可以使用你敲木鱼的AR模式，将喜欢的音效贴纸放置在任何你想要的位置上。</div>
+      <div class="title">网站普及全新框架<br>金鱼1.0</div>
+      <div class="discription">重新设计的网站结构，让网站运行加载速度提升约25%，内存占用减少10%</div>
       <div class="button-group">
         <a class="button linkbutton" href="https://apps.apple.com/cn/app/%E6%95%B2%E6%9C%A8%E9%B1%BC/id6443798663">立即前往购买</a>
         <span class="linkbotton-tips">买断制</span>
       </div>
     </div>
-    <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
+    <img loading="lazy" class="special-card-right" src="./img/jinyu.png">
   </div>
 <!--一中南街一号回忆录-->
   <div id='回忆录'class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
