--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
       <div class="title">网站普及全新框架<br>金鱼1.0</div>
       <div class="discription">重新设计的网站结构，让网站运行加载速度提升约25%，内存占用减少10%</div>
       <div class="button-group">
-        <a class="button linkbutton" href="https://apps.apple.com/cn/app/%E6%95%B2%E6%9C%A8%E9%B1%BC/id6443798663">立即前往购买</a>
-        <span class="linkbotton-tips">买断制</span>
+        <a class="button linkbutton" href="https://blog.springing.top">立即体验</a>
+        <span class="linkbotton-tips">由于缓存策略原因，请您删除网站缓存重新进入即可从服务器拉取最新版本网站
+        </span>
       </div>
     </div>
     <img loading="lazy" class="special-card-right" src="./img/jinyu.png">
