--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </br>
 
 <!--最新消息-->
- <div class="special-card" style="background-image: linear-gradient(180deg, #0ce3e7 0%, #3D00A0 100%);">
+ <div class="special-card" style="background-image: linear-gradient(180deg, #440d91 0%, #3D00A0 100%);">
     <div class="special-card-left">
       <div class="tips">最新消息</div>
       <div class="title">网站普及全新框架<br>金鱼1.0</div>
