new:更新些许新内容

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--中间导航栏,js代码-->
       <div class="nav-center">
         <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
-        <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+        <a href="javascript:heoWeb.scrollTo('导航');" class="nav-item">导航</a>
         <a href="javascript:heoWeb.scrollTo('博客');" class="nav-item">文章</a>
         <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
@@ -48,7 +48,7 @@
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
     <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
-    <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+    <a href="javascript:heoWeb.scrollTo('导航');" class="nav-item">导航</a>
     <a href="javascript:heoWeb.scrollTo('博客');" class="nav-item">文章</a>
     <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
@@ -86,7 +86,7 @@
   <div class="avatar-info">
     <img loading="lazy" class="avatar-image" src="./img/avatar.webp">
     <span class="avatar-name">爱睡觉的小春子</span>
-    <span class="avatar-title">些许风霜些许愁 无足之鸟不回头</span>
+    <span class="avatar-title">一个有趣可爱的人</span>
   </div>
 </div>
 
@@ -97,7 +97,7 @@
  <div class="special-card" style="background-image: linear-gradient(180deg, #440d91 0%, #3D00A0 100%);">
     <div class="special-card-left">
       <div class="tips">最新消息</div>
-      <div class="title">网站普及全新框架<br>金鱼1.0</div>
+      <div class="title">网站普及全新框架<br>鲸鱼1.0</div>
       <div class="discription">重新设计的网站结构，让网站运行加载速度提升约25%，内存占用减少10%</div>
       <div class="button-group">
         <a class="button linkbutton" href="https://blog.springing.top">立即体验</a>
@@ -166,62 +166,48 @@
 </div>
 
 
- <!-- 音乐大主页 -->
-  <div class="product-banner" id="音乐">
+ <!-- 导航大主页 -->
+  <div class="product-banner" id="导航">
     <div class="banner-info need-padding">
-      <span class="tips">Springing-HK音乐</span>
-      <span class="title">基于YesPlayMuisc<span class="punctuation">，</span><br>Netease API二次开发<span class="punctuation">。</span></span>
+      <span class="tips">小春子の起始页</span>
+      <span class="title">简洁大方<span class="punctuation">，</span><br>极速响应<span class="punctuation">。</span></span>
       <div class="banner-discription-group">
-        <span class="description">便携移动快捷的<span class="inline-word">网页端音乐播放器<span class="punctuation">。</span></span></span>
-        <span class="description">无需安装或登录,可在线使用<span class="inline-word">各功能<span class="punctuation">。</span></span></span>
+        <span class="description">便携移动快捷的<span class="inline-word">浏览器起始页<span class="punctuation">。</span></span></span>
+        <span class="description">简洁大方<span class="inline-word">极速响应<span class="punctuation">。</span></span></span>
       </div>
       <div class="link-group">
-        <a class="primary-button" href="https://www.happyking.top">立即前往</a>
+        <a class="primary-button" href="https://nav.springing.top">立即前往</a>
       </div>
     </div>
     <div class="banner-pic">
-      <img class="banner-pic-img" src="./img/yesplaymusic.png" alt="banner image">
+      <img class="banner-pic-img" src="./img/nav.png" alt="banner image">
     </div>
   </div>
 
-  <!--音乐页面相关-->
+  <!--导航页面相关-->
   <div class="product-group need-padding">
     <h2 class="group-title">相关</h2>
     <span class="group-description">Springing Music</span>
     <div class="group-items">
 
-      <!--spring-hk-music-->
+      <!--小春子の导航-->
       <div class="group-item">
-        <a class="group-item-icon" href="https://www.happyking.top" target="_blank">
+        <a class="group-item-icon" href="https://nav.springing.top" target="_blank">
           <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://www.happyking.top" target="_blank">Springing HK Music</a>
-            <a class="discription" href="https://www.happyking.top" target="_blank">基于vue.js的在线音乐网站</a>
+            <a class="title" href="https://nav.springing.top" target="_blank">小春子の导航</a>
+            <a class="discription" href="https://nav.springing.top" target="_blank">一个简洁的导航网站</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://www.happyking.top" target="_blank">Use it</a>
-            <span class="linkbotton-tips">前往Springing HK Music体验</span>
+            <a class="linkbutton" href="https://nav.springing.top" target="_blank">前往体验</a>
+            <span class="linkbotton-tips">建议设置为浏览器默认启动页</span>
           </div>
         </div>
       </div>
 
-    <!--·netease-music-api-->
-      <div class="group-item">
-        <a class="group-item-icon" href="https://netease.happyking.top/" target="_blank">
-          <img class="group-item-icon-img" src="./img/netease.webp" alt="product-icon" title="product-icon">
-        </a>
-        <div class="group-info-group">
-          <div class="group-info">
-            <a class="title" href="https://netease.happyking.top/" target="_blank">Netease API</a>
-            <a class="discription" href="https://netease.happyking.top/" target="_blank">Spring-HKmusic的音乐API</a>
-          </div>
-          <div class="group-info-button">
-            <a class="linkbutton" href="https://netease.happyking.top/" target="_blank">Use it</a>
-          </div>
-        </div>
-      </div>
+   
 
     </div>
   </div>
@@ -262,10 +248,28 @@
             <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">访问</a>
+            <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">前往</a>
           </div>
         </div>
       </div>
+
+
+          <!--小春子の导航-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://nav.springing.top" target="_blank">
+          <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://nav.springing.top" target="_blank">小春子の导航<sup class="hot">持续维护</sup></a>
+            <a class="discription" href="https://nav.springing.top" target="_blank">一个简洁的导航网站</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://nav.springing.top" target="_blank">前往</a>
+          </div>
+        </div>
+      </div>
+
 
       <!--服务监控-->
       <div class="group-item">
@@ -274,11 +278,11 @@
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://status.springing.top" target="_blank">春子服务状态</a>
+            <a class="title" href="https://status.springing.top" target="_blank">春子の服务状态</a>
             <a class="discription" href="https://status.springing.top" target="_blank">查看Spring服务状态</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://status.springing.top" target="_blank">查看</a>
+            <a class="linkbutton" href="https://status.springing.top" target="_blank">前往</a>
           </div>
         </div>
       </div>
@@ -295,6 +299,22 @@
           </div>
           <div class="group-info-button">
             <a class="linkbutton" href="https://blog.springing.top" target="_blank">前往</a>
+          </div>
+        </div>
+      </div>
+
+ <!--网易云音乐api-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://netease.happyking.top/" target="_blank">
+          <img class="group-item-icon-img" src="./img/netease.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://netease.happyking.top/" target="_blank">Netease API</a>
+            <a class="discription" href="https://netease.happyking.top/" target="_blank">Spring-HKmusic的音乐API</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://netease.happyking.top/" target="_blank">Use it</a>
           </div>
         </div>
       </div>
@@ -342,6 +362,24 @@
         </div>
       </div>
     </div>
+
+        <!--南街仓库-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/spring-nav" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航</a>
+          <a class="discription" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航的源代码仓库</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/spring-nav" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
+
     
     <!--博客仓库-->
     <div class="group-item">
@@ -361,6 +399,7 @@
     </div>
 
 
+
   </div>
 </div>
 
@@ -373,7 +412,7 @@
   <div class="footer">
     <div class="footer-content need-padding">
       <span class="info">Copyright © 2022-至今 <font color="#2b9fff">小春子</font>💖 保留所有权利。</span>
-      <span class="info">由 <font color="#2b9fff">金鱼1.0框架</font> 强力驱动 运行基于 <font color="#2b9fff">Spring</font> 服务器</span>
+      <span class="info">由 <font color="#2b9fff">鲸鱼1.0框架</font> 强力驱动 运行基于 <font color="#2b9fff">Spring</font> 服务器</span>
       <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a></div>
     </div>
   </div>
