--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
       </div>
     </div>
 
+
+
+
   </div>
 </div>
 
@@ -187,7 +190,7 @@
   <!--导航页面相关-->
   <div class="product-group need-padding">
     <h2 class="group-title">相关</h2>
-    <span class="group-description">Springing Music</span>
+    <span class="group-description">小春子の导航</span>
     <div class="group-items">
 
       <!--小春子の导航-->
@@ -202,12 +205,28 @@
           </div>
           <div class="group-info-button">
             <a class="linkbutton" href="https://nav.springing.top" target="_blank">前往体验</a>
-            <span class="linkbotton-tips">建议设置为浏览器默认启动页</span>
+            <span class="linkbotton-tips">设为默认主页更香哦</span>
           </div>
         </div>
       </div>
 
    
+        <!--导航仓库-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/spring-nav" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航</a>
+          <a class="discription" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航的源代码仓库</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/spring-nav" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
 
     </div>
   </div>
@@ -363,7 +382,7 @@
       </div>
     </div>
 
-        <!--南街仓库-->
+        <!--导航仓库-->
     <div class="group-item">
       <a class="group-item-icon" href="https://github.com/lispringing/spring-nav" target="_blank">
         <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
@@ -397,7 +416,6 @@
         </div>
       </div>
     </div>
-
 
 
   </div>
