--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航</a>
+          <a class="title" href="https://github.com/lispringing/spring-nav" target="_blank">Spring-nav</a>
           <a class="discription" href="https://github.com/lispringing/spring-nav" target="_blank">小春子の导航的源代码仓库</a>
         </div>
         <div class="group-info-button">
